pop up invisible pour développement + correction bg share

--- a/htdev/styles/layout/_main.scss
+++ b/htdev/styles/layout/_main.scss
@@ -99,6 +99,27 @@ ul{
 
 // PRINT & SHARE-----------------------
 
+    .btn_finish{
+        font-family: 'ralewaybold_italic';
+  }
+
+  .text__pink{
+    font-family: 'ralewayextrabold_italic';
+    text-transform: uppercase;
+    color: #E9187C;
+}
+.text_pop_title{
+    font-family: 'ralewayextrabold_italic';
+    font-size: 2.7em;
+}
+.text_pop_action{
+    font-family: 'ralewayextrabold';
+    font-size: 1.1em;
+    text-decoration: underline ; 
+}
+.text_pop_option{
+font-family: 'Avenir Next LT Pro Italic';
+}
 
 //----------------------------- BADGE CREATION POSITIONNEMENT ------------------------//
 
